refactor(auth): 重构用户认证与会话管理
- 引入 CurrentUser 类统一封装用户上下文信息
- 重构 UserContext 使用 CurrentUser 替代 Map 存储
- 简化 UserRole 枚举移除冗余字段
- 优化 JwtInterceptor 的 token 解析和错误处理逻辑
- 清理过期的 SQL 初始化文件和文档
- 移除未使用的上传目录配置
- 统一控制器中的权限检查逻辑
- 添加 Spring Boot Validation 依赖支持配置校验
- 修复订单取消时的支付宝状态查询逻辑
- 重构 WebSocket 处理程序，分离用户和商家会话管理